--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "scripts": {
     "dev": "astro dev --host",
     "build": "astro build",
-    "preview": "astro preview",
+    "preview": "astro preview  --host",
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/node": "^9.5.1",
+    "@lucide/astro": "^0.561.0",
     "@tailwindcss/vite": "^4.1.18",
     "astro": "^5.16.5",
-    "lucide-react": "^0.561.0",
+    "resend": "^6.6.0",
     "tailwindcss": "^4.1.18"
   }
 }
