--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astracms/astro-loader": "^1.0.3",
     "@astrojs/node": "^9.5.1",
     "@lucide/astro": "^0.561.0",
     "@tailwindcss/vite": "^4.1.18",
