--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@astracms/astro-loader": "^1.0.3",
     "@astrojs/node": "^9.5.1",
+    "@astrojs/vercel": "^9.0.2",
     "@lucide/astro": "^0.561.0",
     "@tailwindcss/typography": "^0.5.19",
     "@tailwindcss/vite": "^4.1.18",
