--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 RESEND_API_KEY="re_FH6VPEjE_8oAVgogsbmRdPzSJ1xnU2Yip"
 ASTRACMS_API_KEY=astra_pk_lCjnxfk06DG1sEjhwv1LEDNHBWA8vqGGwOI8zo13V7a
+ADMIN_EMAIL=andrestorresm001@gmail.com
