--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,14 @@
 {
   "extends": "astro/tsconfigs/strict",
-  "include": [".astro/types.d.ts", "**/*"],
-  "exclude": ["dist"],
+  "include": [
+    ".astro/types.d.ts",
+    "**/*"
+  ],
+  "exclude": [
+    "dist"
+  ],
   "compilerOptions": {
-    // "strictNullChecks": true,
-    // "allowJs": true,
-    "baseUrl": ".", // Set the base directory
+    "baseUrl": ".",
     "paths": {
       "@/*": [
         "src/*"
@@ -22,6 +25,8 @@
       "@utils/*": [
         "src/utils/*"
       ]
-    }
+    },
+    "jsx": "react-jsx",
+    "jsxImportSource": "react"
   }
 }
