--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@astracms/astro-loader": "^1.0.3",
     "@astrojs/node": "^9.5.1",
+    "@astrojs/partytown": "^2.1.4",
     "@astrojs/react": "^4.4.2",
+    "@astrojs/sitemap": "^3.6.0",
     "@astrojs/vercel": "^9.0.2",
     "@lucide/astro": "^0.561.0",
     "@tailwindcss/typography": "^0.5.19",
